2003-03-05  Paul Kienzle <pkienzle@users.sf.net>

	* aclocal.m4 (OCTAVE_DYNAMIC_AUTO_ARRAYS): New macro.
	* configure.in: Use it.
	(AH_BOTTOM): Check HAVE_DYNAMIC_AUTO_ARRAYS instead of __GNUG__.

2003-03-03  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Undo previous change.
	* Makeconf.in: Likewise.

2003-03-01  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in (KPATHSEA_INCFLAGS): New variable.
	* Makeconf.in (KPATHSEA_INCFLAGS): Substitute it.
	(do-subst-config-vals): Add it to the list.
	(INCFLAGS): Add $(KPATHSEA_INCFLAGS).

2003-02-23  Paul Kienzle <pkienzle@users.sf.net>

	* aclocal.m4 (OCTAVE_PLACEMENT_DELETE): New macro.
	* configure.in: Use it.
	(AH_BOTTOM): Don't define HAVE_PLACEMENT_DELETE here.

2003-02-21  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Allow RLD_FLAG to be set using --enable-rpath arg.

	* configure.in: Fix default RLD_FLAG value for *-sgi-*.  From 
	Paul Kienzle <pkienzle@users.sf.net>.

	* configure.in: Check for long long int and unsigned long long int.

	* configure.in (AH_BOTTOM): Define HAVE_PLACEMENT_DELETE for gcc
	3.2 and later.

	* configure.in: Check for copysign and signbit.

2003-02-18  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* emacs/Makefile.in (DISTFILES): Add otags.1 to the list.

2003-02-18  Dirk Eddelbuettel <edd@debian.org>

	* emacs/otags.1: New file.

2003-02-18  David Bateman <dbateman@free.fr>

	* configure.in: Eliminate linpack

2003-02-15  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Check for mkstemp too.

2003-02-13  Arno Klaassen  <arno@scito.com>

        * configure.in: Fix SH_LD and SH_LDFLAGS for -*-*-freebsd*.

2003-02-13  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Use '$(CXX)', '$(AR)', not "$CXX" and "$AR" when
	setting variables for building shared libraries.

2003-02-13  Paul Kienzle <pkienzle@users.sf.net>

	* examples/make_int.cc: Support for ISO standard compilers.

2003-01-22  Richard Stallman <rms@gnu.org>
