@@ -32,7 +32,7 @@ Software Foundation, 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 int
 main (int argc, char **argv)
 {
-  return octave_main (argc, argv);
+  return octave_main (argc, argv, 0);
 }
 
 /*
