@@ -27,7 +27,7 @@ Software Foundation, 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 extern "C" {
 #endif
 
-extern int octave_main (int argc, char **argv);
+extern int octave_main (int argc, char **argv, int embedded);
 
 #ifdef	__cplusplus
 }
